--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://venkeyp333.github.io/Venky-Portfolio",
   "name": "personal-portfolio",
   "version": "0.1.0",
   "private": true,
@@ -42,7 +43,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy" :"npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -67,7 +70,7 @@
     "gh-pages": "^6.2.0",
 
 
-    
+
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14"
   }
